--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
 {
-  "vendor": "CHANGE_ME",
-  "name": "CHANGE_ME",
+  "vendor": "vtex",
+  "name": "live-product-views",
   "version": "0.0.0",
   "title": "CHANGE_ME",
   "description": "CHANGE_ME",
   "builders": {
     "react": "3.x",
     "messages": "1.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "store": "0.x"
   },
-  "dependencies": {},
-  "registries": [
-    "smartcheckout"
-  ],
+  "dependencies": {
+    "vtex.real-time-analytics-graphql": "0.x",
+    "vtex.product-context": "0.x"
+  },
+  "registries": ["smartcheckout"],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
